bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: value While
While (fini != true) {if (!estSurMessage()) fini = true
^BDR:5: error: type mismatch;
 found   : Unit
 required: Boolean
                  if (mes = "R") {droite();avance()}
                          ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
                   if (mes = "L") {gauche();avance()}
                           ^BDR:9: error: type mismatch;
 found   : Unit
 required: Boolean
                     if (mes = "I") {droite();droite();avance()}
                             ^BDR:11: error: type mismatch;
 found   : Unit
 required: Boolean
                       if (mes="A") avance();
                              ^BDR:13: error: type mismatch;
 found   : Unit
 required: Boolean
                         if (mes="B") {avance();avance()}
                                ^BDR:15: error: type mismatch;
 found   : Unit
 required: Boolean
                           if (mes="C") {avance();avance();avance()}
                                  ^BDR:17: error: type mismatch;
 found   : Unit
 required: Boolean
                             if (mes="Z") {recule()}
                                    ^BDR:19: error: type mismatch;
 found   : Unit
 required: Boolean
                               if (mes="Y") {recule();recule()}
                                      ^BDR:21: error: type mismatch;
 found   : Unit
 required: Boolean
                                 if (mes="X") {recule();recule();recule()}
                                        ^